<resources>
    <string name="app_name">Bezpiecznik</string>

    <!-- Menu page -->
    <string name="tests">Tests</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- About page -->
    <string name="authors">Authors:</string>
    <string name="wojtek">Wojciech Kajstura</string>
    <string name="konrad">Konrad Lubera</string>
    <string name="remik">Remigiusz Drobinski</string>
    <string name="polsl">Silesian University of Technology</string>
    <string name="github">Github</string>
    <string name="desc">Application description:</string>

    <!-- Stats fragment  -->
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="duration">Duration:</string>
    <string name="positive_attempts">Positive attempts:</string>
    <string name="attempts">All attempts:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Sharded Preferences key -->
    <string name="userID">com.example.bezpiecznik.userID</string>
    <string name="binID">com.example.bezpiecznik.binID</string>
    <string name="collectionID">com.example.bezpiecznik.collectionID</string>

    <!-- Create user fragment  -->
    <string name="hello">Hello!</string>
    <string name="fill_information">Please fill this form:</string>
    <string name="whats_your_name">Whats your name?</string>
    <string name="master_password">Set your master password:</string>

    <!-- Login user fragment -->
    <string name="enter_passwd">Please enter your master password.</string>
    <string name="master_passwd">Master password:</string>

</resources>